# ShopDemoCMGT

./: CMakeLists.txt  LICENSE.md  README.MD  README.md
apps/shopdemo/: CMakeLists.txt  shopdemo.cpp
apps/shopdemo/include/: shopdemo.h
include/antique/: antique.h
include/money/: money.h
include/shop/: shop.h
src/antique/: CMakeLists.txt  antique.cpp
src/money/: CMakeLists.txt  money.cpp
src/shop/: CMakeLists.txt  shop.cpp
tests/: CMakeLists.txt  MoneyTests.cpp
tests/include/: AntiqueTests.h  MoneyTests.h  ShopTests.h
